# glide

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  Controls.cpp  Controls.h  Edit.cpp  Edit.h  Frame.cpp  Frame.h  Image.cpp  Image.h  Image_loadJpeg.cpp  Image_readFileInfo.cpp  Layout.cpp  Layout.h  Main.cpp  Main.h  Mutex.cpp  Mutex.h  ResourceManager.cpp  ResourceManager.h  common.h  sfmlframework.h
src/hmath/: all.h  geometry.h  linear_algebra.h  statistics.h
